--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "electron:windows": "npm run build:prod && npx electron-builder build --windows",
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "precommit": "npm run commitlint && npm run lint",
+    "commitlint": "commitlint -e"
   },
   "dependencies": {},
   "devDependencies": {
@@ -47,6 +49,8 @@
     "@angular/platform-browser": "6.0.3",
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
+    "@commitlint/cli": "^6.2.0",
+    "@commitlint/config-conventional": "^6.1.3",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
     "@types/jasmine": "2.8.7",
@@ -57,6 +61,7 @@
     "electron": "2.0.2",
     "electron-builder": "20.14.7",
     "electron-reload": "1.2.2",
+    "husky": "^0.14.3",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.2",
