--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ install:
   - npm install
 script:
   - ng lint
+  - npm run test:cover:unix
   - npm run test
   - npm run e2e
   - npm run build
+after_success:
+  - npm run coveralls:unix
