--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "test": "ng test",
     "e2e": "ng e2e",
     "precommit": "npm run commitlint && npm run lint",
-    "commitlint": "commitlint -e"
+    "commitlint": "commitlint -e",
+    "test:cover:unix": "rm -rf ./coverage && ng-test --no-watch --code-coverage",
+    "coveralls:unix": "cat ./coverage/lcov.info | .node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {},
   "devDependencies": {
@@ -58,6 +60,7 @@
     "@types/node": "8.9.4",
     "codelyzer": "4.2.1",
     "core-js": "2.5.6",
+    "coveralls": "^3.0.1",
     "electron": "2.0.2",
     "electron-builder": "20.14.7",
     "electron-reload": "1.2.2",
