--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "e2e": "ng e2e",
     "precommit": "npm run commitlint && npm run lint",
     "commitlint": "commitlint -e",
-    "test:cover:unix": "rm -rf ./coverage && ng-test --no-watch --code-coverage",
+    "test:cover:unix": "rm -rf ./coverage && ng test --no-watch --code-coverage",
     "coveralls:unix": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {},
