--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "precommit": "npm run commitlint && npm run lint",
     "commitlint": "commitlint -e",
     "test:cover:unix": "rm -rf ./coverage && ng test --no-watch --code-coverage",
-    "coveralls:unix": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls:unix": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test:cover:win32": "Remove-item ./coverage -Force -Recurse && ng test --no-watch --code-coverage",
+    "coveralls:win32": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
     "@angular/cdk": "^6.1.0",
