--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ install:
   # install modules
   - npm set progress=false
   - npm install
+  - npm install -g @angular/cli@latest --silent
 
 # Post-install test scripts.
 test_script:
