--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
     "electron:windows": "npm run build:prod && npx electron-builder build --windows",
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
+    "rebuild": "electron-rebuild -f -w sqlite3",
     "test": "ng test",
     "e2e": "ng e2e",
     "precommit": "npm run commitlint && npm run lint",
@@ -43,7 +44,10 @@
   "dependencies": {
     "@angular/cdk": "^6.1.0",
     "@angular/flex-layout": "^6.0.0-beta.15",
-    "@angular/material": "^6.1.0"
+    "@angular/material": "^6.1.0",
+    "reflect-metadata": "^0.1.12",
+    "sqlite3": "^4.0.0",
+    "typeorm": "^0.2.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
@@ -71,6 +75,7 @@
     "coveralls": "^3.0.1",
     "electron": "2.0.2",
     "electron-builder": "20.14.7",
+    "electron-rebuild": "^1.7.3",
     "electron-reload": "1.2.2",
     "husky": "^0.14.3",
     "jasmine-core": "3.1.0",
