--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
   - npm set progress=false
   - npm install
   - npm install -g @angular/cli@latest --silent
+  - npm run rebuild
 
 # Post-install test scripts.
 test_script:
