--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
     "ng:serve": "ng serve -o",
-    "electron:tsc": "tsc main.ts",
+    "electron:tsc": "tsc main.ts  --experimentalDecorators --outDir dist",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
