fix: tsc configuration and build in electron

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
     "ng:serve": "ng serve -o",
-    "electron:tsc": "tsc main.ts  --experimentalDecorators --outDir dist",
-    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron . --serve",
+    "electron:tsc": "tsc -p ./tsconfig.json --experimentalDecorators && copyfiles package.json dist/out-tsc && cd dist/out-tsc && npm install && cd ..",
+    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron ./dist/out-tsc/main.js --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
     "electron:windows": "npm run build:prod && npx electron-builder build --windows",
