fix: add copyfiles npm dependency install to ci configuration files

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ install:
   - choco install googlechrome
   # install modules
   - npm set progress=false
+  - npm install -g copyfiles
   - npm install
   - npm install -g @angular/cli@latest --silent
   - npm run rebuild
