--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 install:
   - npm set progress=false
+  - npm install -g copyfiles
   - npm install
 script:
   - ng lint
